--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,23 +8,60 @@
 
     <!--bootstrap for styling-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+        crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+        crossorigin=""></script>
+    <style>
+        #mapid {
+            height: 780px;
+        }
+    </style>
 </head>
+
 <body>
-    <div class="container"> <!-- content -->
-        <h1>YOUR VISUALIZATION TITLE HERE</h1>
-        <p class="lead">By YOUR NAMES HERE</p>
+    <div class="container">
+        <!-- content -->
+        <h1>SEATTLE 911 CALLS MAP</h1>
+        <p class="lead">ZHEHAO JIN, LIUQING MA</p>
 
         <!-- more html content can go here; e.g., any control buttons -->
+        <button type="button" class="btn btn-primary" id="city">Seattle City</button>
+        <button type="button" class="btn btn-primary" id="downtwon">Seattle Downtown Area</button>
+        <button type="button" class="btn btn-primary" id="uw">University of Washington Area</button>
+        <button type="button" class="btn btn-primary" id="north">North Seattle Area</button>
+        <button type="button" class="btn btn-primary" id="south">South Seattle Area</button>
+        <p></p>
 
-        <div id="visContainer"></div> <!-- A container to hold the visualization -->
+        <div id="visContainer"></div>
+        <!-- A container to hold the visualization -->
 
         <!-- more html content can go here, e.g., further details or explanations -->
 
-        <p id="citation">Data from ...</p>
+        <p id="citation">Data from
+            <a href="https://data.seattle.gov/resource/grwu-wqtk.json?$where=datetime%20is%20not%20null&$order=datetime%20desc&$limit=500">data.seattle.gov</a>
+        </p>
+    </div>
+
+    <div class="container">
+        <!-- content -->
+        <h1>MORE VISUALIZATION</h1>
+        <div id="visContainer2"></div>
+        <!-- A container to hold the visualization -->
+
+        <!-- more html content can go here, e.g., further details or explanations -->
+
+        <p id="citation">Data from
+            <a href="https://data.seattle.gov/resource/grwu-wqtk.json?$where=datetime%20is%20not%20null&$order=datetime%20desc&$limit=500">data.seattle.gov</a>
+        </p>
     </div>
 
     <!-- JavaScript modules -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="visualization.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment-with-locales.min.js"></script>
 </body>
+
 </html>
