--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
         crossorigin="" />
+    <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
         crossorigin=""></script>
     <style>
@@ -21,14 +22,14 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container map">
         <!-- content -->
         <h1>SEATTLE 911 CALLS MAP</h1>
         <p class="lead">ZHEHAO JIN, LIUQING MA</p>
 
         <!-- more html content can go here; e.g., any control buttons -->
         <button type="button" class="btn btn-primary" id="city">Seattle City</button>
-        <button type="button" class="btn btn-primary" id="downtwon">Seattle Downtown Area</button>
+        <button type="button" class="btn btn-primary" id="downtown">Seattle Downtown Area</button>
         <button type="button" class="btn btn-primary" id="uw">University of Washington Area</button>
         <button type="button" class="btn btn-primary" id="north">North Seattle Area</button>
         <button type="button" class="btn btn-primary" id="south">South Seattle Area</button>
@@ -43,18 +44,26 @@
             <a href="https://data.seattle.gov/resource/grwu-wqtk.json?$where=datetime%20is%20not%20null&$order=datetime%20desc&$limit=500">data.seattle.gov</a>
         </p>
     </div>
+    <div id="plot">
+        <div class="container plot1">
+            <!-- content -->
+            <h1>Incident Type</h1>
+            <div id="visContainer2"></div>
+            <!-- A container to hold the visualization -->
 
-    <div class="container">
-        <!-- content -->
-        <h1>MORE VISUALIZATION</h1>
-        <div id="visContainer2"></div>
-        <!-- A container to hold the visualization -->
+            <!-- more html content can go here, e.g., further details or explanations -->
 
-        <!-- more html content can go here, e.g., further details or explanations -->
+        </div>
 
-        <p id="citation">Data from
-            <a href="https://data.seattle.gov/resource/grwu-wqtk.json?$where=datetime%20is%20not%20null&$order=datetime%20desc&$limit=500">data.seattle.gov</a>
-        </p>
+        <div class="container plot2">
+            <!-- content -->
+            <h1>Latest 24h</h1>
+            <div id="visContainer3"></div>
+            <!-- A container to hold the visualization -->
+
+            <!-- more html content can go here, e.g., further details or explanations -->
+
+        </div>
     </div>
 
     <!-- JavaScript modules -->
