--- a/index.html
+++ b/index.html
@@ -26,33 +26,31 @@
         <!-- content -->
         <h1>SEATTLE 911 CALLS MAP (Past day)</h1>
         <p class="lead">ZHEHAO JIN, LIUQING MA</p>
-        <p id='subtitle'>There is a 6-hour delay for the API to update incidences, so the graphs shown are based on yesterday. </p>
+        <p id='subtitle'>There is a 6-hour delay for the API to update incidences, so the graphs shown are based on yesterday.</p>
 
         <!-- more html content can go here; e.g., any control buttons -->
+        <div id="visContainer"></div>
+        <!-- A container to hold the visualization -->
+
+        <!-- more html content can go here, e.g., further details or explanations -->
         <button type="button" class="btn btn-primary" id="city">Seattle City</button>
         <button type="button" class="btn btn-primary" id="downtown">Seattle Downtown Area</button>
         <button type="button" class="btn btn-primary" id="uw">University of Washington Area</button>
         <button type="button" class="btn btn-primary" id="north">North Seattle Area</button>
         <button type="button" class="btn btn-primary" id="south">South Seattle Area</button>
-        <p></p>
-
-        <div id="visContainer"></div>
-        <!-- A container to hold the visualization -->
-
-        <!-- more html content can go here, e.g., further details or explanations -->
-
-        <p id="citation">Data from
-            <a href="https://data.seattle.gov/resource/grwu-wqtk.json?$where=datetime%20is%20not%20null&$order=datetime%20desc&$limit=500">data.seattle.gov</a>
+        <button type="button" class="btn btn-light" id="south">Data from
+            <a href="https://data.seattle.gov/resource/grwu-wqtk.json?$where=datetime%20is%20not%20null&$order=datetime%20desc&$limit=500">data.seattle.gov</button>
+        <p id="citation">
+            </a>
         </p>
+        <p></p>
     </div>
     <div id="plot">
         <div class="container plot1">
             <!-- content -->
             <h1>Incident Type</h1>
-            <div id="visContainer2"></div>
-            <!-- A container to hold the visualization -->
-
-            <!-- more html content can go here, e.g., further details or explanations -->
+            <p style="white-space:nowrap" id="number"></p>
+            <div id="typeplot"></div>
 
         </div>
 
@@ -62,11 +60,6 @@
             <p style="white-space:nowrap" id="timeNow"></p>
             <svg class='chart'>
             </svg>
-            
-            <!-- A container to hold the visualization -->
-                
-            <!-- more html content can go here, e.g., further details or explanations -->
-
         </div>
     </div>
 
